...
    override fun onMethodCall(call: MethodCall, result: MethodChannel.Result) {
        try {
            when (call.method) {
                "isSupported" -> result.success(isSupported)
                "showProgress" -> {
                    val stage = call.argument<String>("stage") ?: ""
                    val title = call.argument<String>("title") ?: "GitSync"
                    val text = call.argument<String>("text") ?: ""
                    showProgress(stage, title, text)
                    result.success(null)
                }
                "completeProgress" -> {
                    val success = call.argument<Boolean>("success") ?: true
...
