...
  "useForTileManualSync": "Für manuelle Kachel-Sync verwenden",
  "selectYourGitProviderAndAuthenticate": "Wählen Sie Ihren Git-Anbieter aus und authentifizieren Sie sich",
  "oauthNoAffiliation": "Authentifizierung über Drittanbieter;\nkeine Zugehörigkeit oder Befürwortung impliziert.",
  "oauth": "oauth",
  "ensureTokenScope": "Stellen Sie sicher, dass Ihr Token den \"repo\"-Bereich für volle Funktionalität enthält.",
  "user": "Benutzer",
  "exampleUser": "JohnSmith12",
  "token": "Token",
  "exampleToken": "ghp_1234abcd5678efgh",
  "login": "Anmelden",
  "pubKey": "Öffentlicher Schlüssel",
  "privKey": "Privater Schlüssel",
  "privateKey": "Privater Schlüssel",
  "sshPubKeyExample": "ssh-ed25519 AABBCCDDEEFF112233445566",
  "sshPrivKeyExample": "-----BEGIN OPENSSH PRIVATE KEY----- AABBCCDDEEFF112233445566",
...
