appId: com.shelbeely.gitcommand
---
- launchApp:
    appId: com.shelbeely.gitcommand
- assertVisible: "GitSync"
- tapOn: "more sync options"
- assertVisible: "MERGE CONFLICT"
- takeScreenshot: generate_screenshots/raw/screenshot_merge_conflict
