appId: com.shelbeely.gitcommand
---
- launchApp:
    appId: com.shelbeely.gitcommand
- assertVisible: "GitSync"
- runFlow:
    when:
      notVisible: "DON'T SYNC"
    commands:
      - tapOn: "Scheduled Sync Settings"
- scroll
- scroll
- takeScreenshot: generate_screenshots/raw/screenshot_scheduled_sync_settings
