appId: com.shelbeely.gitcommand
---
- launchApp:
    appId: com.shelbeely.gitcommand
- assertVisible: "GitSync"
- tapOn: "repository settings"
- assertVisible: "SETTINGS"
- takeScreenshot: generate_screenshots/raw/screenshot_settings
