appId: com.shelbeely.gitcommand
---
- runFlow: ../assert.yaml
- runFlow:
    when:
      notVisible: "GITHUB"
    commands:
      - tapOn: ".*auth dropdown"
      - assertVisible: "GITHUB"
      - tapOn: "GITHUB"
- tapOn: "OAUTH (ALL REPOS)"
